nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
    - port: 80          # port exposé pour les clients
      targetPort: 8080  # port utilisé à l’intérieur du conteneur
  type: ClusterIP
